--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,10 @@
+@import url("https://fonts.googleapis.com/css2?family=Comforter&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Cairo&family=Comforter&display=swap');;
+
+*{
+  font-family: 'Cairo', sans-serif;
+}
+
 body {
   background-color: #282c34;
 }
@@ -148,19 +155,35 @@ img {
   margin: 2px 5px;
 }
 
-.create-room{
-  color:rgb(184, 178, 178);
+.create-room {
+  color: rgb(184, 178, 178);
   display: inline-block;
   text-align: center;
   min-height: 50vh;
   background-color: rgb(40, 37, 53);
 }
-
-
-.create-room input{
+.create-room label{
+  display: block;
+  font-size: 95%;
+  margin-bottom: 15px;
+}
+.create-room input {
   width: auto;
   margin-right: 25px;
 }
-.create-room button{
+.create-room button {
   width: auto;
+}
+
+.icon {
+  color: #0b93f6;
+  margin-left: 35px;
+  width: 100%;
+  height: auto;
+}
+
+.title {
+  color: #999999;
+  font-family: "Comforter", sans-serif;
+  font-weight: bold;
 }
